--- a/.gitignore
+++ b/.gitignore
@@ -6,8 +6,10 @@
 **/.idea/shelf/*
 **/.idea/dictionaries
 **/.idea/httpRequests/
+
 # Entire .idea folder
-/.idea/
+/.idea*
+*/.idea
 
 # Sensitive or high-churn files
 **/.idea/**/dataSources/
