--- a/SpellboundSettlement/SpellboundSettlement.csproj
+++ b/SpellboundSettlement/SpellboundSettlement.csproj
@@ -27,7 +27,7 @@
     <PackageReference Include="MonoGame.Content.Builder.Task" Version="3.8.1.303" />
   </ItemGroup>
   <ItemGroup>
-    <ProjectReference Include="..\GameUI\GameUI.csproj" />
+    <ProjectReference Include="..\UI\UI.csproj" />
   </ItemGroup>
   <Target Name="RestoreDotnetTools" BeforeTargets="Restore">
     <Message Text="Restoring dotnet tools" Importance="High" />
