Updated csproj names

--- a/Andavies.MonoGame.Game/Andavies.MonoGame.Game.csproj
+++ b/Andavies.MonoGame.Game/Andavies.MonoGame.Game.csproj
@@ -5,6 +5,7 @@
     <RollForward>Major</RollForward>
     <PublishReadyToRun>false</PublishReadyToRun>
     <TieredCompilation>false</TieredCompilation>
+    <RootNamespace>SpellboundSettlement</RootNamespace>
   </PropertyGroup>
   <PropertyGroup>
     <ApplicationManifest>app.manifest</ApplicationManifest>
@@ -27,7 +28,7 @@
     <PackageReference Include="MonoGame.Content.Builder.Task" Version="3.8.1.303" />
   </ItemGroup>
   <ItemGroup>
-    <ProjectReference Include="..\UI\UI.csproj" />
+    <ProjectReference Include="..\Andavies.MonoGame.UI\Andavies.MonoGame.UI.csproj" />
   </ItemGroup>
   <Target Name="RestoreDotnetTools" BeforeTargets="Restore">
     <Message Text="Restoring dotnet tools" Importance="High" />
