--- a/Andavies.MonoGame.Game/Andavies.MonoGame.Game.csproj
+++ b/Andavies.MonoGame.Game/Andavies.MonoGame.Game.csproj
@@ -28,6 +28,7 @@
     <PackageReference Include="MonoGame.Content.Builder.Task" Version="3.8.1.303" />
   </ItemGroup>
   <ItemGroup>
+    <ProjectReference Include="..\Andavies.MonoGame.Input\Andavies.MonoGame.Input.csproj" />
     <ProjectReference Include="..\Andavies.MonoGame.UI\Andavies.MonoGame.UI.csproj" />
   </ItemGroup>
   <Target Name="RestoreDotnetTools" BeforeTargets="Restore">
