--- a/Andavies.MonoGame.UI/Andavies.MonoGame.UI.csproj
+++ b/Andavies.MonoGame.UI/Andavies.MonoGame.UI.csproj
@@ -8,12 +8,10 @@
 
     <ItemGroup>
       <PackageReference Include="MonoGame.Framework.DesktopGL" Version="3.8.1.303" />
-
-
-
     </ItemGroup>
 
-
-
+    <ItemGroup>
+      <ProjectReference Include="..\Andavies.MonoGame.Input\Andavies.MonoGame.Input.csproj" />
+    </ItemGroup>
 
 </Project>
