Updated Andavies.MonoGame.Input to Andavies.MonoGame.Inputs and added ability to hold down the backspace key for a text input and added delays for it as well

--- a/Andavies.MonoGame.Game/Andavies.MonoGame.Game.csproj
+++ b/Andavies.MonoGame.Game/Andavies.MonoGame.Game.csproj
@@ -29,7 +29,7 @@
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\Andavies.MonoGame.Game.Client\Andavies.MonoGame.Game.Client.csproj" />
-    <ProjectReference Include="..\Andavies.MonoGame.Input\Andavies.MonoGame.Input.csproj" />
+    <ProjectReference Include="..\Andavies.MonoGame.Inputs\Andavies.MonoGame.Inputs.csproj" />
     <ProjectReference Include="..\Andavies.MonoGame.Meshes\Andavies.MonoGame.Meshes.csproj" />
     <ProjectReference Include="..\Andavies.MonoGame.UI\Andavies.MonoGame.UI.csproj" />
   </ItemGroup>
