--- a/Andavies.MonoGame.Game/Andavies.MonoGame.Game.csproj
+++ b/Andavies.MonoGame.Game/Andavies.MonoGame.Game.csproj
@@ -29,6 +29,7 @@
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\Andavies.MonoGame.Game.Client\Andavies.MonoGame.Game.Client.csproj" />
+    <ProjectReference Include="..\Andavies.MonoGame.Game.Server\Andavies.MonoGame.Game.Server.csproj" />
     <ProjectReference Include="..\Andavies.MonoGame.Inputs\Andavies.MonoGame.Inputs.csproj" />
     <ProjectReference Include="..\Andavies.MonoGame.Meshes\Andavies.MonoGame.Meshes.csproj" />
     <ProjectReference Include="..\Andavies.MonoGame.UI\Andavies.MonoGame.UI.csproj" />
