--- a/Andavies.MonoGame.Game.Server/Andavies.MonoGame.Game.Server.csproj
+++ b/Andavies.MonoGame.Game.Server/Andavies.MonoGame.Game.Server.csproj
@@ -8,7 +8,10 @@
     </PropertyGroup>
 
     <ItemGroup>
+      <PackageReference Include="Autofac" Version="7.1.0" />
       <PackageReference Include="LiteNetLib" Version="1.1.0" />
     </ItemGroup>
+
+
 
 </Project>
