--- a/Andavies.MonoGame.Game.Client/Andavies.MonoGame.Game.Client.csproj
+++ b/Andavies.MonoGame.Game.Client/Andavies.MonoGame.Game.Client.csproj
@@ -10,4 +10,8 @@
       <PackageReference Include="LiteNetLib" Version="1.1.0" />
     </ItemGroup>
 
+    <ItemGroup>
+      <ProjectReference Include="..\Andavies.MonoGame.Game.Server\Andavies.MonoGame.Game.Server.csproj" />
+    </ItemGroup>
+
 </Project>
