--- a/Andavies.MonoGame.Game.Server/Andavies.MonoGame.Game.Server.csproj
+++ b/Andavies.MonoGame.Game.Server/Andavies.MonoGame.Game.Server.csproj
@@ -10,6 +10,7 @@
     <ItemGroup>
       <PackageReference Include="Autofac" Version="7.1.0" />
       <PackageReference Include="LiteNetLib" Version="1.1.0" />
+      <PackageReference Include="MonoGame.Framework.DesktopGL" Version="3.8.1.303" />
     </ItemGroup>
 
 
