BROKEN - moving over so I can work on my laptop. In the process of setting up a custom subscription for the network client

--- a/Andavies.MonoGame.Game.Server/Andavies.MonoGame.Game.Server.csproj
+++ b/Andavies.MonoGame.Game.Server/Andavies.MonoGame.Game.Server.csproj
@@ -17,6 +17,7 @@
 
     <ItemGroup>
       <ProjectReference Include="..\Andavies.SpellboundSettlement.NetworkMessages\Andavies.SpellboundSettlement.NetworkMessages.csproj" />
+      <ProjectReference Include="..\Andavies.SpellboundSettlement.World\Andavies.SpellboundSettlement.World.csproj" />
     </ItemGroup>
 
 </Project>
