World/Chunk packets now officially send properly and will be displayed

--- a/Andavies.SpellboundSettlement.NetworkMessages/Andavies.SpellboundSettlement.NetworkMessages.csproj
+++ b/Andavies.SpellboundSettlement.NetworkMessages/Andavies.SpellboundSettlement.NetworkMessages.csproj
@@ -14,4 +14,8 @@
 
 
 
+    <ItemGroup>
+      <ProjectReference Include="..\Andavies.SpellboundSettlement.World\Andavies.SpellboundSettlement.World.csproj" />
+    </ItemGroup>
+
 </Project>
