Updated csproj file names and updated all namespaces

--- a/Andavies.SpellboundSettlement/Andavies.SpellboundSettlement.csproj
+++ b/Andavies.SpellboundSettlement/Andavies.SpellboundSettlement.csproj
@@ -5,7 +5,7 @@
     <RollForward>Major</RollForward>
     <PublishReadyToRun>false</PublishReadyToRun>
     <TieredCompilation>false</TieredCompilation>
-    <RootNamespace>SpellboundSettlement</RootNamespace>
+    <RootNamespace>Andavies.SpellboundSettlement</RootNamespace>
   </PropertyGroup>
   <PropertyGroup>
     <ApplicationManifest>app.manifest</ApplicationManifest>
@@ -28,7 +28,7 @@
     <PackageReference Include="MonoGame.Content.Builder.Task" Version="3.8.1.303" />
   </ItemGroup>
   <ItemGroup>
-    <ProjectReference Include="..\Andavies.MonoGame.Game.Server\Andavies.MonoGame.Game.Server.csproj" />
+    <ProjectReference Include="..\Andavies.SpellboundSettlement.Server\Andavies.SpellboundSettlement.Server.csproj" />
     <ProjectReference Include="..\Andavies.MonoGame.Inputs\Andavies.MonoGame.Inputs.csproj" />
     <ProjectReference Include="..\Andavies.MonoGame.Meshes\Andavies.MonoGame.Meshes.csproj" />
     <ProjectReference Include="..\Andavies.MonoGame.Network\Andavies.MonoGame.Network.csproj" />
