--- a/Andavies.SpellboundSettlement.Server/Andavies.SpellboundSettlement.Server.csproj
+++ b/Andavies.SpellboundSettlement.Server/Andavies.SpellboundSettlement.Server.csproj
@@ -4,6 +4,23 @@
         <TargetFramework>net6.0</TargetFramework>
         <ImplicitUsings>enable</ImplicitUsings>
         <Nullable>enable</Nullable>
+        <OutputType>Exe</OutputType>
     </PropertyGroup>
+
+    <ItemGroup>
+      <PackageReference Include="Autofac" Version="7.1.0" />
+      <PackageReference Include="LiteNetLib" Version="1.1.0" />
+      <PackageReference Include="MonoGame.Framework.DesktopGL" Version="3.8.1.303" />
+    </ItemGroup>
+
+
+
+    <ItemGroup>
+      <ProjectReference Include="..\Andavies.SpellboundSettlement.NetworkMessages\Andavies.SpellboundSettlement.NetworkMessages.csproj" />
+      <ProjectReference Include="..\Andavies.SpellboundSettlement.World\Andavies.SpellboundSettlement.World.csproj" />
+    </ItemGroup>
+
+
+
 
 </Project>
