--- a/Andavies.SpellboundSettlement.Server/Andavies.SpellboundSettlement.Server.csproj
+++ b/Andavies.SpellboundSettlement.Server/Andavies.SpellboundSettlement.Server.csproj
@@ -9,8 +9,11 @@
 
     <ItemGroup>
       <PackageReference Include="Autofac" Version="7.1.0" />
+      <PackageReference Include="AutofacSerilogIntegration" Version="5.0.0" />
       <PackageReference Include="LiteNetLib" Version="1.1.0" />
       <PackageReference Include="MonoGame.Framework.DesktopGL" Version="3.8.1.303" />
+      <PackageReference Include="Serilog" Version="3.1.2-dev-02097" />
+      <PackageReference Include="Serilog.Sinks.Console" Version="5.0.0" />
     </ItemGroup>
 
 
