--- a/Andavies.SpellboundSettlement/Andavies.SpellboundSettlement.csproj
+++ b/Andavies.SpellboundSettlement/Andavies.SpellboundSettlement.csproj
@@ -24,8 +24,11 @@
   </ItemGroup>
   <ItemGroup>
     <PackageReference Include="Autofac" Version="7.1.0" />
+    <PackageReference Include="AutofacSerilogIntegration" Version="5.0.0" />
     <PackageReference Include="MonoGame.Framework.DesktopGL" Version="3.8.1.303" />
     <PackageReference Include="MonoGame.Content.Builder.Task" Version="3.8.1.303" />
+    <PackageReference Include="Serilog" Version="3.1.2-dev-02097" />
+    <PackageReference Include="Serilog.Sinks.Console" Version="5.0.0" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\Andavies.SpellboundSettlement.Server\Andavies.SpellboundSettlement.Server.csproj" />
