--- a/Andavies.MonoGame.Network/Andavies.MonoGame.Network.csproj
+++ b/Andavies.MonoGame.Network/Andavies.MonoGame.Network.csproj
@@ -9,6 +9,7 @@
 
     <ItemGroup>
       <PackageReference Include="LiteNetLib" Version="1.1.0" />
+      <PackageReference Include="Serilog" Version="3.1.2-dev-02097" />
     </ItemGroup>
 
 </Project>
