--- a/Andavies.MonoGame.Network/Andavies.MonoGame.Network.csproj
+++ b/Andavies.MonoGame.Network/Andavies.MonoGame.Network.csproj
@@ -12,4 +12,9 @@
       <PackageReference Include="Serilog" Version="3.1.2-dev-02097" />
     </ItemGroup>
 
+
+    <ItemGroup>
+      <ProjectReference Include="..\Andavies.MonoGame.NetworkUtilities\Andavies.MonoGame.NetworkUtilities.csproj" />
+    </ItemGroup>
+
 </Project>
