Renamed World csproj to Gameworld

--- a/Andavies.SpellboundSettlement.NetworkMessages/Andavies.SpellboundSettlement.NetworkMessages.csproj
+++ b/Andavies.SpellboundSettlement.NetworkMessages/Andavies.SpellboundSettlement.NetworkMessages.csproj
@@ -14,7 +14,7 @@
     
     <ItemGroup>
       <ProjectReference Include="..\Andavies.MonoGame.NetworkUtilities\Andavies.MonoGame.NetworkUtilities.csproj" />
-      <ProjectReference Include="..\Andavies.SpellboundSettlement.World\Andavies.SpellboundSettlement.World.csproj" />
+      <ProjectReference Include="..\Andavies.SpellboundSettlement.GameWorld\Andavies.SpellboundSettlement.GameWorld.csproj" />
     </ItemGroup>
 
 </Project>
