--- a/Andavies.SpellboundSettlement.Server/Andavies.SpellboundSettlement.Server.csproj
+++ b/Andavies.SpellboundSettlement.Server/Andavies.SpellboundSettlement.Server.csproj
@@ -21,15 +21,12 @@
     <ItemGroup>
       <ProjectReference Include="..\Andavies.MonoGame.Network\Andavies.MonoGame.Network.csproj" />
       <ProjectReference Include="..\Andavies.SpellboundSettlement.NetworkMessages\Andavies.SpellboundSettlement.NetworkMessages.csproj" />
-      <ProjectReference Include="..\Andavies.SpellboundSettlement.World\Andavies.SpellboundSettlement.World.csproj" />
+      <ProjectReference Include="..\Andavies.SpellboundSettlement.GameWorld\Andavies.SpellboundSettlement.GameWorld.csproj" />
     </ItemGroup>
 
 
 
 
-    <ItemGroup>
-      <Folder Include="Interfaces\" />
-    </ItemGroup>
 
 
 
