--- a/Andavies.MonoGame.Network/Andavies.MonoGame.Network.csproj
+++ b/Andavies.MonoGame.Network/Andavies.MonoGame.Network.csproj
@@ -9,13 +9,10 @@
 
     <ItemGroup>
       <PackageReference Include="LiteNetLib" Version="1.1.0" />
+      <PackageReference Include="MonoGame.Framework.DesktopGL" Version="3.8.1.303" />
       <PackageReference Include="Serilog" Version="3.1.2-dev-02097" />
     </ItemGroup>
 
-
-    <ItemGroup>
-      <ProjectReference Include="..\Andavies.MonoGame.NetworkUtilities\Andavies.MonoGame.NetworkUtilities.csproj" />
-    </ItemGroup>
 
 
 
