Updated way that tile models are drawn to make it easier to add new ones without having to update too much code. Also updated models to .dae as .obj was having an issue drawing with a material

--- a/Andavies.MonoGame.Network/Andavies.MonoGame.Network.csproj
+++ b/Andavies.MonoGame.Network/Andavies.MonoGame.Network.csproj
@@ -16,4 +16,9 @@
 
 
 
+    <ItemGroup>
+      <ProjectReference Include="..\Andavies.MonoGame.Utilities\Andavies.MonoGame.Utilities.csproj" />
+    </ItemGroup>
+
+
 </Project>
