--- a/Andavies.SpellboundSettlement/Andavies.SpellboundSettlement.csproj
+++ b/Andavies.SpellboundSettlement/Andavies.SpellboundSettlement.csproj
@@ -39,6 +39,9 @@
     <ProjectReference Include="..\Andavies.SpellboundSettlement.NetworkMessages\Andavies.SpellboundSettlement.NetworkMessages.csproj" />
     <ProjectReference Include="..\Andavies.MonoGame.UI\Andavies.MonoGame.UI.csproj" />
   </ItemGroup>
+  <ItemGroup>
+    <Folder Include="Content\Models\Rocks\" />
+  </ItemGroup>
   <Target Name="RestoreDotnetTools" BeforeTargets="Restore">
     <Message Text="Restoring dotnet tools" Importance="High" />
     <Exec Command="dotnet tool restore" />
