--- a/Andavies.SpellboundSettlement/Andavies.SpellboundSettlement.csproj
+++ b/Andavies.SpellboundSettlement/Andavies.SpellboundSettlement.csproj
@@ -27,6 +27,7 @@
     <PackageReference Include="AutofacSerilogIntegration" Version="5.0.0" />
     <PackageReference Include="MonoGame.Framework.DesktopGL" Version="3.8.1.303" />
     <PackageReference Include="MonoGame.Content.Builder.Task" Version="3.8.1.303" />
+    <PackageReference Include="Newtonsoft.Json" Version="13.0.3" />
     <PackageReference Include="Serilog" Version="3.1.2-dev-02097" />
     <PackageReference Include="Serilog.Expressions" Version="4.0.0" />
     <PackageReference Include="Serilog.Sinks.Console" Version="5.0.0" />
@@ -41,6 +42,12 @@
   </ItemGroup>
   <ItemGroup>
     <Folder Include="Content\Models\Rocks\" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Remove="Assets\Config\world_tiles.json" />
+    <Content Include="Assets\Config\world_tiles.json">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </Content>
   </ItemGroup>
   <Target Name="RestoreDotnetTools" BeforeTargets="Restore">
     <Message Text="Restoring dotnet tools" Importance="High" />
