Updated models to have a min/max display scale for some tiles that should be generated with different sizes

--- a/Andavies.SpellboundSettlement.GameWorld/Andavies.SpellboundSettlement.GameWorld.csproj
+++ b/Andavies.SpellboundSettlement.GameWorld/Andavies.SpellboundSettlement.GameWorld.csproj
@@ -8,11 +8,13 @@
 
     <ItemGroup>
       <PackageReference Include="MonoGame.Framework.DesktopGL" Version="3.8.1.303" />
+      <PackageReference Include="Newtonsoft.Json" Version="13.0.3" />
     </ItemGroup>
 
     <ItemGroup>
       <ProjectReference Include="..\Andavies.MonoGame.Meshes\Andavies.MonoGame.Meshes.csproj" />
       <ProjectReference Include="..\Andavies.MonoGame.Utilities\Andavies.MonoGame.Utilities.csproj" />
     </ItemGroup>
+
 
 </Project>
