--- a/Andavies.SpellboundSettlement/Andavies.SpellboundSettlement.csproj
+++ b/Andavies.SpellboundSettlement/Andavies.SpellboundSettlement.csproj
@@ -41,6 +41,7 @@
     <ProjectReference Include="..\Andavies.MonoGame.UI\Andavies.MonoGame.UI.csproj" />
   </ItemGroup>
   <ItemGroup>
+    <Folder Include="Content\Models\Bushes\" />
     <Folder Include="Content\Models\Rocks\" />
   </ItemGroup>
   <ItemGroup>
