Added a wizard to the mix

--- a/Andavies.SpellboundSettlement.GameWorld/Andavies.SpellboundSettlement.GameWorld.csproj
+++ b/Andavies.SpellboundSettlement.GameWorld/Andavies.SpellboundSettlement.GameWorld.csproj
@@ -14,6 +14,7 @@
     <ItemGroup>
       <ProjectReference Include="..\Andavies.MonoGame.Meshes\Andavies.MonoGame.Meshes.csproj" />
       <ProjectReference Include="..\Andavies.MonoGame.Utilities\Andavies.MonoGame.Utilities.csproj" />
+      <ProjectReference Include="..\Andavies.SpellboundSettlement.Wizards\Andavies.SpellboundSettlement.Wizards.csproj" />
     </ItemGroup>
 
 
