Updated Wizards to have rotation.
There are a few shader artifact from another branch that somehow made it on here

--- a/Andavies.SpellboundSettlement/Andavies.SpellboundSettlement.csproj
+++ b/Andavies.SpellboundSettlement/Andavies.SpellboundSettlement.csproj
@@ -47,6 +47,9 @@
   <ItemGroup>
     <None Remove="Assets\Config\world_tiles.json" />
   </ItemGroup>
+  <ItemGroup>
+    <ClCompile Include="Content\Shaders\ShadowMap.fx" />
+  </ItemGroup>
   <Target Name="RestoreDotnetTools" BeforeTargets="Restore">
     <Message Text="Restoring dotnet tools" Importance="High" />
     <Exec Command="dotnet tool restore" />
