Added a loiter state to wizards

--- a/Andavies.SpellboundSettlement.GameWorld/Andavies.SpellboundSettlement.GameWorld.csproj
+++ b/Andavies.SpellboundSettlement.GameWorld/Andavies.SpellboundSettlement.GameWorld.csproj
@@ -7,15 +7,17 @@
     </PropertyGroup>
 
     <ItemGroup>
+      <PackageReference Include="LiteNetLib" Version="1.1.0" />
       <PackageReference Include="MonoGame.Framework.DesktopGL" Version="3.8.1.303" />
       <PackageReference Include="Newtonsoft.Json" Version="13.0.3" />
     </ItemGroup>
 
     <ItemGroup>
       <ProjectReference Include="..\Andavies.MonoGame.Meshes\Andavies.MonoGame.Meshes.csproj" />
+      <ProjectReference Include="..\Andavies.MonoGame.Network\Andavies.MonoGame.Network.csproj" />
       <ProjectReference Include="..\Andavies.MonoGame.Utilities\Andavies.MonoGame.Utilities.csproj" />
-      <ProjectReference Include="..\Andavies.SpellboundSettlement.Wizards\Andavies.SpellboundSettlement.Wizards.csproj" />
     </ItemGroup>
+
 
 
 
