--- a/Andavies.MonoGame.Inputs/Andavies.MonoGame.Inputs.csproj
+++ b/Andavies.MonoGame.Inputs/Andavies.MonoGame.Inputs.csproj
@@ -8,6 +8,7 @@
 
     <ItemGroup>
       <PackageReference Include="MonoGame.Framework.DesktopGL" Version="3.8.1.303" />
+      <PackageReference Include="Serilog" Version="3.1.2-dev-02097" />
     </ItemGroup>
 
 
