--- a/Andavies.MonoGame.Utilities.Test/Andavies.MonoGame.Utilities.Test.csproj
+++ b/Andavies.MonoGame.Utilities.Test/Andavies.MonoGame.Utilities.Test.csproj
@@ -14,10 +14,12 @@
         <PackageReference Include="MSTest.TestAdapter" Version="2.2.8"/>
         <PackageReference Include="MSTest.TestFramework" Version="2.2.8"/>
         <PackageReference Include="coverlet.collector" Version="3.1.2"/>
+        <PackageReference Include="NSubstitute" Version="5.1.0" />
     </ItemGroup>
 
     <ItemGroup>
       <ProjectReference Include="..\Andavies.MonoGame.Utilities\Andavies.MonoGame.Utilities.csproj" />
     </ItemGroup>
+
 
 </Project>
