--- a/Andavies.MonoGame.Inputs/Andavies.MonoGame.Inputs.csproj
+++ b/Andavies.MonoGame.Inputs/Andavies.MonoGame.Inputs.csproj
@@ -13,4 +13,8 @@
 
 
 
+    <ItemGroup>
+      <ProjectReference Include="..\Andavies.MonoGame.Utilities\Andavies.MonoGame.Utilities.csproj" />
+    </ItemGroup>
+
 </Project>
